# frasohome-agents-foundry

./: .env.example  .gitignore  Global AI Chapter - Agentes_Microsoft_Foundry_FraSoHome.pptx  README.md  README_CODE.md  README_NOTEBOOK.md  README_PORTAL.md  agents.md  pyproject.toml  requirements.txt
case/: fraso_home_caso.md  fraso_home_storytelling_foundry.md  paso_a_paso_portal_foundry_agents_workflows.md  plan_sesion_practica_foundry_frasohome.md
case/kb/: FS-KB-04_Manual_Tienda_Caja_y_Pagos_Mixtos_v2.1.md  FS-KB-05_Guia_Conciliacion_Pagos_Ecommerce_v1.4.md  FS-KB-06_Taxonomia_Catalogo_y_Reglas_SKU_v1.2.md  README.md
case/kb/markdown/: FS-KB-01_Politica_Devoluciones_v1.3_Vigente.md  FS-KB-03_Diccionario_KPI_Reglas_Calculo_v1.0.md  FS-KB-07_Guia_Fidelizacion_CRM_v1.1.md  FS-KB-09_FAQ_Operaciones_y_Atencion_v1.0.md
notebooks/: frasohome_foundry_agents_demo.ipynb
src/frasohome_agents/: __init__.py  assets.py  cli.py  contracts.py  create_agents.py  foundry.py  local_data_quality.py  orchestrator.py  prompts.py  run_agents.py  settings.py
